--- a/admin-menu.html
+++ b/admin-menu.html
@@ -1,25 +1,24 @@
 
+<!-- 管理メニュー管理ページ本体 -->
 <div class="content-container">
   <h2>管理メニュー管理</h2>
-  <form id="menuForm" class="form-grid">
-    <div class="form-row">
-      <label for="title">表示名：</label>
+  <form id="menuForm">
+    <div>
+      <label>表示名：</label>
       <input type="text" id="title" required>
     </div>
-    <div class="form-row">
-      <label for="filename">リンク先HTML：</label>
+    <div>
+      <label>リンク先HTML：</label>
       <input type="text" id="filename" required>
     </div>
-    <div class="form-row">
-      <label for="sort_order">順番（数字）：</label>
+    <div>
+      <label>順番（数字）：</label>
       <input type="number" id="sort_order" required>
     </div>
-    <div class="form-row">
+    <div>
       <label><input type="checkbox" id="is_active"> 公開状態</label>
     </div>
-    <div class="form-row">
-      <button type="submit">追加</button>
-    </div>
+    <button type="submit">追加</button>
   </form>
 
   <table id="menuTable">
@@ -35,20 +34,71 @@
   </table>
 </div>
 
+<style>
+  .content-container {
+    padding: 20px;
+  }
+  #menuForm div {
+    margin-bottom: 10px;
+  }
+  #menuForm input[type="text"],
+  #menuForm input[type="number"] {
+    padding: 4px;
+    width: 300px;
+  }
+  #menuForm button {
+    padding: 6px 12px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+  #menuForm button:hover {
+    background-color: #0056b3;
+  }
+  #menuTable {
+    margin-top: 20px;
+    width: 100%;
+    border-collapse: collapse;
+  }
+  #menuTable th, #menuTable td {
+    padding: 8px 12px;
+    border: 1px solid #ccc;
+    text-align: left;
+  }
+  #menuTable th {
+    background-color: #f4f4f4;
+  }
+</style>
+
 <script type="module">
   import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+
   const supabaseUrl = 'https://viihcgkjzzhkdiwdzdex.supabase.co'
   const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZpaWhjZ2tqenpoa2Rpd2R6ZGV4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTIxMzUwNDksImV4cCI6MjAyNzAxMTA0OX0.0jjcgZ_EH7Ek8MBwCvgtatg1-lDFpNuFRHh14iPYjJU'
   const supabase = createClient(supabaseUrl, supabaseKey)
+
+  // 認証セッションの復元
+  const authSession = localStorage.getItem("sb-htnmjsqgoapvuansuma-auth-token")
+  if (authSession) {
+    const { access_token, refresh_token } = JSON.parse(authSession)
+    if (access_token && refresh_token) {
+      await supabase.auth.setSession({ access_token, refresh_token })
+    }
+  }
 
   const tableBody = document.querySelector('#menuTable tbody')
   const form = document.getElementById('menuForm')
 
   async function fetchMenus() {
-    console.log('🔄 メニュー一覧を取得中...')
-    const { data, error } = await supabase.from('admin_menus').select('*').order('sort_order')
+    const { data, error } = await supabase
+      .from('admin_menus')
+      .select('*')
+      .order('sort_order')
+
     if (error) {
-      console.error('❌ データ取得エラー:', error)
+      console.error('取得エラー:', error)
       return
     }
 
@@ -67,21 +117,15 @@
 
   form.addEventListener('submit', async (e) => {
     e.preventDefault()
-    const title = document.getElementById('title').value.trim()
-    const filename = document.getElementById('filename').value.trim()
+    const title = document.getElementById('title').value
+    const filename = document.getElementById('filename').value
     const sort_order = Number(document.getElementById('sort_order').value)
     const is_active = document.getElementById('is_active').checked
-
-    if (!title || !filename || isNaN(sort_order)) {
-      alert('すべての項目を正しく入力してください。')
-      return
-    }
 
     const { error } = await supabase.from('admin_menus').insert([{ title, filename, sort_order, is_active }])
     if (error) {
       alert('追加失敗: ' + error.message)
     } else {
-      alert('追加しました')
       form.reset()
       await fetchMenus()
     }
@@ -89,52 +133,3 @@
 
   fetchMenus()
 </script>
-
-<style>
-  .content-container {
-    padding: 20px;
-    max-width: 800px;
-  }
-  .form-grid {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    margin-bottom: 20px;
-  }
-  .form-row {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  .form-row label {
-    width: 140px;
-    font-weight: bold;
-  }
-  input[type="text"], input[type="number"] {
-    flex: 1;
-    padding: 6px;
-  }
-  button {
-    padding: 6px 12px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  button:hover {
-    background-color: #0056b3;
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  th, td {
-    padding: 10px;
-    border: 1px solid #ddd;
-    text-align: left;
-  }
-  th {
-    background-color: #f2f2f2;
-  }
-</style>
