--- a/admin-menu.html
+++ b/admin-menu.html
@@ -1,82 +1,124 @@
-<div class="main-content">
-  <h2 class="text-2xl font-bold mb-4">管理メニュー管理</h2>
-  <form id="menuForm" class="mb-6">
-    <div class="mb-2">
-      <label class="block font-semibold">表示名：</label>
-      <input type="text" id="name" class="border px-2 py-1 w-full">
-    </div>
-    <div class="mb-2">
-      <label class="block font-semibold">リンク先HTML：</label>
-      <input type="text" id="html" class="border px-2 py-1 w-full">
-    </div>
-    <div class="mb-2">
-      <label class="block font-semibold">順番（数字）：</label>
-      <input type="number" id="order" class="border px-2 py-1 w-full">
-    </div>
-    <div class="mb-2">
-      <label><input type="checkbox" id="is_public"> 公開状態</label>
-    </div>
-    <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-1 px-4 rounded">追加</button>
-  </form>
-  <table class="table-auto w-full">
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>管理メニュー管理</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f8f9fa;
+      margin: 0;
+      padding: 2rem;
+    }
+    h2 {
+      font-weight: bold;
+      margin-bottom: 2rem;
+    }
+    .form-check-label {
+      margin-left: 0.25rem;
+    }
+    .table th, .table td {
+      vertical-align: middle;
+    }
+  </style>
+</head>
+<body>
+  <h2>管理メニュー管理</h2>
+  <div class="mb-3">
+    <label for="menuName" class="form-label">表示名：</label>
+    <input type="text" id="menuName" class="form-control">
+  </div>
+  <div class="mb-3">
+    <label for="menuHTML" class="form-label">リンク先HTML：</label>
+    <input type="text" id="menuHTML" class="form-control">
+  </div>
+  <div class="mb-3">
+    <label for="menuOrder" class="form-label">順番（数字）：</label>
+    <input type="number" id="menuOrder" class="form-control">
+  </div>
+  <div class="form-check mb-3">
+    <input type="checkbox" class="form-check-input" id="menuVisible">
+    <label for="menuVisible" class="form-check-label">公開状態</label>
+  </div>
+  <button class="btn btn-primary mb-4" onclick="addMenu()">追加</button>
+
+  <table class="table table-bordered table-striped">
     <thead>
-      <tr class="bg-gray-100">
-        <th class="px-4 py-2">表示名</th>
-        <th class="px-4 py-2">HTML</th>
-        <th class="px-4 py-2">順番</th>
-        <th class="px-4 py-2">公開</th>
+      <tr>
+        <th>表示名</th>
+        <th>HTML</th>
+        <th>順番</th>
+        <th>公開</th>
       </tr>
     </thead>
-    <tbody id="menuList"></tbody>
+    <tbody id="menuList">
+    </tbody>
   </table>
-</div>
 
-<script>
-const supabaseUrl = 'https://htnmjsqgoapvuanrsuma.supabase.co';
-const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA';
-const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script>
+    const supabase = supabase.createClient(
+      "https://htnmjsqgoapvuanrsuma.supabase.co",
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
+    );
 
-async function fetchMenus() {
-  const { data, error } = await supabase.from('admin_menu').select('*').order('order');
-  if (error) {
-    console.error('読み込み失敗:', error);
-    return;
-  }
-  const menuList = document.getElementById('menuList');
-  menuList.innerHTML = '';
-  data.forEach(item => {
-    const tr = document.createElement('tr');
-    tr.innerHTML = `
-      <td class="border px-4 py-2">${item.name}</td>
-      <td class="border px-4 py-2">${item.html}</td>
-      <td class="border px-4 py-2">${item.order}</td>
-      <td class="border px-4 py-2 text-center">${item.is_public ? '✓' : ''}</td>
-    `;
-    menuList.appendChild(tr);
-  });
-}
+    async function loadMenu() {
+      const { data, error } = await supabase
+        .from("admin_menu")
+        .select("*")
+        .order("order", { ascending: true });
 
-fetchMenus();
+      const list = document.getElementById("menuList");
+      list.innerHTML = "";
 
-document.getElementById('menuForm').addEventListener('submit', async (e) => {
-  e.preventDefault();
-  const name = document.getElementById('name').value;
-  const html = document.getElementById('html').value;
-  const order = parseInt(document.getElementById('order').value);
-  const is_public = document.getElementById('is_public').checked;
+      if (error) {
+        const row = document.createElement("tr");
+        row.innerHTML = `<td colspan="4">読み込み失敗: ${error.message}</td>`;
+        list.appendChild(row);
+        return;
+      }
 
-  if (!name || !html || isNaN(order)) {
-    alert('すべての項目を正しく入力してください');
-    return;
-  }
+      data.forEach((item) => {
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td>${item.name}</td>
+          <td>${item.html}</td>
+          <td>${item.order}</td>
+          <td>${item.visible ? "✓" : ""}</td>
+        `;
+        list.appendChild(row);
+      });
+    }
 
-  const { error } = await supabase.from('admin_menu').insert([{ name, html, order, is_public }]);
-  if (error) {
-    alert('追加に失敗しました');
-    console.error(error);
-    return;
-  }
-  document.getElementById('menuForm').reset();
-  fetchMenus();
-});
-</script>
+    async function addMenu() {
+      const name = document.getElementById("menuName").value;
+      const html = document.getElementById("menuHTML").value;
+      const order = parseInt(document.getElementById("menuOrder").value);
+      const visible = document.getElementById("menuVisible").checked;
+
+      if (!name || !html || isNaN(order)) {
+        alert("全ての項目を正しく入力してください。");
+        return;
+      }
+
+      const { error } = await supabase.from("admin_menu").insert([
+        { name, html, order, visible }
+      ]);
+
+      if (error) {
+        alert("追加に失敗しました: " + error.message);
+      } else {
+        document.getElementById("menuName").value = "";
+        document.getElementById("menuHTML").value = "";
+        document.getElementById("menuOrder").value = "";
+        document.getElementById("menuVisible").checked = false;
+        loadMenu();
+      }
+    }
+
+    loadMenu();
+  </script>
+</body>
+</html>
