--- a/admin-menu.html
+++ b/admin-menu.html
@@ -1,51 +1,27 @@
 
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>管理メニュー管理</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-  <style>
-    body {
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f8f9fa;
-      margin: 0;
-      padding: 2rem;
-    }
-    h2 {
-      font-weight: bold;
-      margin-bottom: 2rem;
-    }
-    .form-check-label {
-      margin-left: 0.25rem;
-    }
-    .table th, .table td {
-      vertical-align: middle;
-    }
-  </style>
-</head>
-<body>
+<!-- 管理メニュー管理 -->
+<div class="container mt-4">
   <h2>管理メニュー管理</h2>
-  <div class="mb-3">
-    <label for="menuName" class="form-label">表示名：</label>
-    <input type="text" id="menuName" class="form-control">
+  <div class="form-group">
+    <label for="displayName">表示名：</label>
+    <input type="text" id="displayName" class="form-control" />
   </div>
-  <div class="mb-3">
-    <label for="menuHTML" class="form-label">リンク先HTML：</label>
-    <input type="text" id="menuHTML" class="form-control">
+  <div class="form-group">
+    <label for="htmlLink">リンク先HTML：</label>
+    <input type="text" id="htmlLink" class="form-control" />
   </div>
-  <div class="mb-3">
-    <label for="menuOrder" class="form-label">順番（数字）：</label>
-    <input type="number" id="menuOrder" class="form-control">
+  <div class="form-group">
+    <label for="order">順番（数字）：</label>
+    <input type="number" id="order" class="form-control" />
   </div>
-  <div class="form-check mb-3">
-    <input type="checkbox" class="form-check-input" id="menuVisible">
-    <label for="menuVisible" class="form-check-label">公開状態</label>
+  <div class="form-group form-check">
+    <input type="checkbox" id="isPublished" class="form-check-input" />
+    <label class="form-check-label" for="isPublished">公開状態</label>
   </div>
-  <button class="btn btn-primary mb-4" onclick="addMenu()">追加</button>
+  <button id="addButton" class="btn btn-primary">追加</button>
 
-  <table class="table table-bordered table-striped">
-    <thead>
+  <table class="table mt-4">
+    <thead class="thead-light">
       <tr>
         <th>表示名</th>
         <th>HTML</th>
@@ -53,72 +29,71 @@
         <th>公開</th>
       </tr>
     </thead>
-    <tbody id="menuList">
-    </tbody>
+    <tbody id="menuTableBody"></tbody>
   </table>
+</div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script>
-    const supabase = supabase.createClient(
-      "https://htnmjsqgoapvuanrsuma.supabase.co",
-      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
-    );
+<script type="module">
+  import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
-    async function loadMenu() {
+  const supabaseUrl = 'https://htnmjsqgoapvuanrsuma.supabase.co';
+  const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA';
+  const supabase = createClient(supabaseUrl, supabaseKey);
+
+  document.addEventListener('DOMContentLoaded', async () => {
+    const tableBody = document.getElementById("menuTableBody");
+
+    async function loadMenus() {
       const { data, error } = await supabase
-        .from("admin_menu")
-        .select("*")
-        .order("order", { ascending: true });
+        .from('admin_menu')
+        .select('*')
+        .order('sort_order', { ascending: true });
 
-      const list = document.getElementById("menuList");
-      list.innerHTML = "";
-
+      tableBody.innerHTML = '';
       if (error) {
-        const row = document.createElement("tr");
-        row.innerHTML = `<td colspan="4">読み込み失敗: ${error.message}</td>`;
-        list.appendChild(row);
+        const row = document.createElement('tr');
+        row.innerHTML = `<td colspan="4">読み込みエラー: ${error.message}</td>`;
+        tableBody.appendChild(row);
         return;
       }
 
       data.forEach((item) => {
-        const row = document.createElement("tr");
+        const row = document.createElement('tr');
         row.innerHTML = `
-          <td>${item.name}</td>
+          <td>${item.label}</td>
           <td>${item.html}</td>
-          <td>${item.order}</td>
-          <td>${item.visible ? "✓" : ""}</td>
+          <td>${item.sort_order}</td>
+          <td>${item.is_published ? '✓' : ''}</td>
         `;
-        list.appendChild(row);
+        tableBody.appendChild(row);
       });
     }
 
-    async function addMenu() {
-      const name = document.getElementById("menuName").value;
-      const html = document.getElementById("menuHTML").value;
-      const order = parseInt(document.getElementById("menuOrder").value);
-      const visible = document.getElementById("menuVisible").checked;
+    document.getElementById('addButton').addEventListener('click', async () => {
+      const label = document.getElementById('displayName').value.trim();
+      const html = document.getElementById('htmlLink').value.trim();
+      const sort_order = parseInt(document.getElementById('order').value, 10);
+      const is_published = document.getElementById('isPublished').checked;
 
-      if (!name || !html || isNaN(order)) {
-        alert("全ての項目を正しく入力してください。");
+      if (!label || !html || isNaN(sort_order)) {
+        alert("全項目を正しく入力してください");
         return;
       }
 
-      const { error } = await supabase.from("admin_menu").insert([
-        { name, html, order, visible }
-      ]);
-
+      const { error } = await supabase.from('admin_menu').insert([{ label, html, sort_order, is_published }]);
       if (error) {
         alert("追加に失敗しました: " + error.message);
-      } else {
-        document.getElementById("menuName").value = "";
-        document.getElementById("menuHTML").value = "";
-        document.getElementById("menuOrder").value = "";
-        document.getElementById("menuVisible").checked = false;
-        loadMenu();
+        return;
       }
-    }
 
-    loadMenu();
-  </script>
-</body>
-</html>
+      document.getElementById('displayName').value = '';
+      document.getElementById('htmlLink').value = '';
+      document.getElementById('order').value = '';
+      document.getElementById('isPublished').checked = false;
+
+      await loadMenus();
+    });
+
+    await loadMenus();
+  });
+</script>
