--- a/admin-top.html
+++ b/admin-top.html
@@ -5,30 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>管理者ダッシュボード</title>
   <style>
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       display: flex;
       height: 100vh;
+      background-color: #f9fafb;
     }
     header {
-      background-color: #1f2937;
+      background: linear-gradient(90deg, #1f2937, #374151);
       color: white;
-      padding: 0.5rem 1rem;
+      padding: 0.75rem 1rem;
       text-align: center;
       font-size: 1.2rem;
+      font-weight: bold;
       flex-shrink: 0;
       width: 100%;
       position: fixed;
       top: 0;
       left: 0;
       z-index: 1000;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     }
     aside {
-      background-color: #f4f4f4;
-      width: 220px;
-      padding-top: 3rem;
-      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+      background-color: #ffffff;
+      width: 240px;
+      padding-top: 3.5rem;
+      border-right: 1px solid #e5e7eb;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.05);
     }
     aside button {
       display: block;
@@ -39,15 +44,22 @@
       text-align: left;
       cursor: pointer;
       font-size: 1rem;
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid #f3f4f6;
+      transition: background-color 0.2s;
     }
     aside button:hover {
-      background-color: #e0e0e0;
+      background-color: #f9fafb;
     }
     main {
       flex-grow: 1;
-      padding: 4rem 2rem 2rem 2rem;
+      padding: 4.5rem 2rem 2rem 2rem;
       overflow-y: auto;
+    }
+    .card {
+      background: #fff;
+      border-radius: 0.5rem;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      padding: 1.5rem;
     }
   </style>
 </head>
@@ -57,12 +69,15 @@
     <!-- メニューが動的に挿入される -->
   </aside>
   <main id="main-content">
-    <!-- メニュー選択によりここが切り替わる -->
+    <div class="card">左のメニューから操作を選択してください。</div>
   </main>
 
   <script type="module">
     import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
-    const supabase = createClient("https://htnmjsqgoapvuanrsuma.supabase.co", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA");
+    const supabase = createClient(
+      "https://htnmjsqgoapvuanrsuma.supabase.co",
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
+    );
 
     const loadContent = async (page) => {
       const res = await fetch(page);
@@ -71,25 +86,18 @@
     };
 
     async function init() {
-      const { data: { session } } = await supabase.auth.getSession();
-      if (!session) {
-        window.location.href = "admin-index.html";
-        return;
-      }
-
       const { data, error } = await supabase
         .from("admin_menus")
         .select("*")
         .eq("is_active", true)
         .order("sort_order", { ascending: true });
 
-      if (error) {
-        document.getElementById("menu-area").innerHTML = "<p>メニューの読み込みに失敗しました</p>";
+      const menuArea = document.getElementById("menu-area");
+      if (error || !data) {
+        menuArea.innerHTML = "<p style='padding:1rem;color:red;'>メニューの読み込みに失敗しました</p>";
         return;
       }
-
-      const menuArea = document.getElementById("menu-area");
-      menuArea.innerHTML = ""; // クリア
+      menuArea.innerHTML = "";
 
       data.forEach(item => {
         const btn = document.createElement("button");
@@ -98,7 +106,6 @@
         menuArea.appendChild(btn);
       });
 
-      // 初期表示（最初のメニュー）
       if (data.length > 0) {
         loadContent(data[0].filename);
       }
